--- a/configure.ac
+++ b/configure.ac
@@ -1,5 +1,5 @@
 AC_INIT([libutility], [0.2], [manvscode@gmail.com], [libutility], [http://www.manvscode.com/])
-AM_INIT_AUTOMAKE([-Wall -Werror foreign])
+AM_INIT_AUTOMAKE([1.13 foreign silent-rules -Wall -Werror])
 
 AM_SILENT_RULES([yes])
 AC_CONFIG_HEADERS([src/libutility-config.h])
