--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,28 @@
+# Automake and Autoconf
+Makefile
+ar-lib
+autom4te.cache/
+bin/
+compile
+config.guess
+config.log
+config.status
+config.sub
+configure
+lib/
+libtool
+ltmain.sh
+src/.deps/
+src/libutility-config.h.in~
+tests/.deps/
+tests/Makefile
+tests/Makefile.in
+Makefile.in
+aclocal.m4
+src/Makefile
+src/Makefile.in
+
+
 # Compiled Object files
 *.slo
 *.lo
